[package]
name = "agb_template"
version = "0.1.0"
authors = [""]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
agb = { git = "https://github.com/agbrs/agb.git", rev = "8aa5643337c3f3ddec64a56dd712a64a4cc7356b" }
agb_tracker = { git = "https://github.com/agbrs/agb.git", rev = "8aa5643337c3f3ddec64a56dd712a64a4cc7356b" }

[profile.dev]
opt-level = 3
debug = true

[profile.release]
opt-level = 3
lto = "fat"
debug = true
